Fourth Commit For Render

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,6 @@
 <header class="p-3 text-bg-dark">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="{% url 'index' %}" class="nav-link px-2 text-secondary">Home</a></li>
@@ -28,8 +25,8 @@
           <li><a href="#" class="nav-link px-2 text-white">About</a></li>
         </ul>
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 d-flex" role="search" method="get" action="{% url 'search' %}">
-            <input type="text" name="query" class="form-control form-control-dark text-bg-dark me-2" placeholder="Search a drink..." aria-label="Search">
-            <button type="submit" class="btn btn-outline-warning me-2">Search</button>
+            <input type="text" name="query" class="form-control mx-1" placeholder="Search a drink..." aria-label="Search">
+            <button type="submit" class="btn btn-outline-primary btn-lg btn-sm">Search</button>
          </form>
       </div>
     </div>
