--- a/templates/myApp/search.html
+++ b/templates/myApp/search.html
@@ -2,95 +2,98 @@
 
 {% block content %}
 
-<div class="p-4 p-md-5 my-4 rounded text-body-emphasis heading-part">
+<div class="container p-4 p-md-5 my-4 rounded text-body-emphasis heading-part d-none d-lg-block">
     <div class="col-lg-6 px-0">
-      <h1 class="display-4 fst-italic">Search in our database</h1>
-      <p class="lead my-3">Type a drink name and click the button and get all the information about it!</p>
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 d-flex" role="search" method="get" action="{% url 'search' %}">
-        <input type="text" name="query" class="form-control me-2" placeholder="Search a drink..." aria-label="Search">
-        <button type="submit" class="btn btn-primary me-2">Search</button>
-     </form>    </div>
-  </div>
-    
+        <h1 class="display-4 fst-italic text-dark">Search in our database</h1>
+        <p class="lead my-3 text-dark">Type a drink name and click the button and get all the information about it!</p>
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 d-flex" role="search" method="get"
+              action="{% url 'search' %}">
+            <input type="text" name="query" class="form-control me-2" placeholder="Search a drink..."
+                   aria-label="Search">
+            <button type="submit" class="btn btn-primary me-2">Search</button>
+        </form>
+    </div>
+</div>
+
 {% if query %}
-    
-    {% if drink.error %}
-        <div class="p-4 p-md-5 my-4 rounded text-body-emphasis heading-part">
-            <div class="col-lg-6 px-0">
+
+    {% if drinks.error %}
+    <div class="p-4 p-md-5 my-4 rounded text-body-emphasis heading-part">
+        <div class="col-lg-6 px-0">
             <h1 class="display-4 fst-italic">Not Found!</h1>
-            <p class="lead my-3"> Error: {{ drink.error }} </p>
-            </div>
+            <p class="lead my-3"> Error: {{ drinks.error }} </p>
         </div>
-        <p></p>
+    </div>
+    <p></p>
     {% else %}
-    
-        {% for drink in drinks %}
-        <div class="container col-xxl-8 px-4 pt-2 pb-4 my-5 main-part">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-2">
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="{{ drink.strDrinkThumb }}" class="d-block mx-lg-auto img-fluid"
-                        alt="{{ drink.strDrink }} pic" width="700"
-                        height="500" loading="lazy">
-                </div>
-                <div class="col-lg-6 py-0">
-                    <h5 class="display-5 lh-1 my-3 py-0 fw-bold">{{ drink.strDrink }}</h5>
-                    <h5>Instructions</h5>
-                    <p>{{ drink.strInstructions }}</p>
-                    <h5>Category:</h5>
-                    <p>{{ drink.strCategory }}</p>
-                    <h5>Ingredients</h5>
-                    <ul class="list-group">
-                        {% if drink.strIngredient1 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure1 }}
-                            {{ drink.strIngredient1 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient2 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure2 }}
-                            {{ drink.strIngredient2 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient3 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure3 }}
-                            {{ drink.strIngredient3 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient4 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure4 }}
-                            {{ drink.strIngredient4 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient5 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure5 }}
-                            {{ drink.strIngredient5 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient6 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure6 }}
-                            {{ drink.strIngredient6 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient7 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure7 }}
-                            {{ drink.strIngredient7 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient8 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure8 }}
-                            {{ drink.strIngredient8 }}
-                        </li>
-                        {% endif %}
-                        {% if drink.strIngredient9 != None %}
-                        <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure9 }} {{
-                            drink.strIngredient9 }}
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div>
+
+    {% for drink in drinks %}
+    <div class="container px-4 pt-2 pb-4 my-2 main-part">
+        <div class="row flex-lg-row-reverse align-items-center py-2">
+            <div class="col-12 col-lg-6">
+                <img src="{{ drink.strDrinkThumb }}" class="d-block mx-lg-auto img-fluid"
+                     alt="{{ drink.strDrink }} pic" width="700"
+                     height="500" loading="lazy">
+            </div>
+            <div class="col-lg-6 py-0">
+                <h5 class="display-5 lh-1 my-3 py-0 fw-bold text-dark">{{ drink.strDrink }}</h5>
+                <h5 class="text-dark">Instructions</h5>
+                <p class="text-dark">{{ drink.strInstructions }}</p>
+                <h5 class="text-dark">Category:</h5>
+                <p class="text-dark">{{ drink.strCategory }}</p>
+                <h5 class="text-dark">Ingredients</h5>
+                <ul class="list-group">
+                    {% if drink.strIngredient1 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure1 }}
+                        {{ drink.strIngredient1 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient2 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure2 }}
+                        {{ drink.strIngredient2 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient3 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure3 }}
+                        {{ drink.strIngredient3 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient4 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure4 }}
+                        {{ drink.strIngredient4 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient5 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure5 }}
+                        {{ drink.strIngredient5 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient6 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure6 }}
+                        {{ drink.strIngredient6 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient7 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure7 }}
+                        {{ drink.strIngredient7 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient8 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure8 }}
+                        {{ drink.strIngredient8 }}
+                    </li>
+                    {% endif %}
+                    {% if drink.strIngredient9 != None %}
+                    <li class="list-group-item text-bg-dark p-3">{{ drink.strMeasure9 }} {{
+                        drink.strIngredient9 }}
+                    </li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
-        {% endfor %}
-    {% endif %}     
+    </div>
+    {% endfor %}
+    {% endif %}
 {% endif %}
 {% endblock content %}
     
