--- a/templates/myApp/search.html
+++ b/templates/myApp/search.html
@@ -32,6 +32,7 @@
             <!-- Image Section -->
             <div class="col-12 col-lg-6 mb-3 mb-lg-0">
                 <img src="{{ drink.strDrinkThumb }}" class="d-block mx-auto img-fluid rounded shadow-sm" alt="{{ drink.strDrink }} pic" width="700" height="500" loading="lazy">
+                <a href="{% url 'add_favorite' drink.idDrink %}" class="mt-5 btn btn-outline-danger">Add To Favorite</a>
             </div>
             <!-- Text Section -->
             <div class="col-12 col-lg-6">
