--- a/templates/myApp/my_favorites.html
+++ b/templates/myApp/my_favorites.html
@@ -16,7 +16,7 @@
 <div class="container px-4 pt-2 pb-4 my-2 main-part">
     <div class="row flex-lg-row-reverse align-items-center py-2">
         <!-- Image Section -->
-        <div class="col-12 col-lg-6 mb-3 mb-lg-0">
+        <div class="col-12 col-lg-6 mb-3 mb-lg-0 text-center">
             <img src="{{favorite.recipe.picture_url}}" class="d-block mx-auto img-fluid rounded shadow-sm" alt="{{ drink.strDrink }} pic" width="700" height="500" loading="lazy">
             <a href="" class="mt-5 btn btn-danger">Remove</a>
         </div>
@@ -24,14 +24,14 @@
         <div class="col-12 col-lg-6">
             <h5 class="display-5 lh-1 my-3 fw-bold text-dark">{{ favorite.recipe.title }}</h5>
             <h5 class="text-dark">Instructions</h5>
-            <p class="text-dark">{{ favorite.recipe.instruction }}</p>
+            <p class="text-dark">{{ favorite.recipe.instructions }}</p>
             <h5 class="text-dark">Category:</h5>
             <p class="text-dark">{{ favorite.recipe.category }}</p>
             <h5 class="text-dark">Ingredients</h5>
             <ul class="list-group">
                 
-                {% for amount, ingredient in favorite.combined %}
-                <li class="list-group-item text-bg-dark p-3">{{ amount.title }} {{ ingredient.title }}</li>
+                {% for ingredient in favorite.recipe.recipe_ingredients.all %}
+                <li class="list-group-item text-bg-dark p-3">{{ ingredient.amount }} {{ ingredient.ingredient.name }}</li>
 
                 {% endfor %}
                     
