--- a/templates/myApp/search.html
+++ b/templates/myApp/search.html
@@ -30,9 +30,9 @@
     <div class="container px-4 pt-2 pb-4 my-2 main-part">
         <div class="row flex-lg-row-reverse align-items-center py-2">
             <!-- Image Section -->
-            <div class="col-12 col-lg-6 mb-3 mb-lg-0">
+            <div class="col-12 col-lg-6 mb-3 mb-lg-0 text-center">
                 <img src="{{ drink.strDrinkThumb }}" class="d-block mx-auto img-fluid rounded shadow-sm" alt="{{ drink.strDrink }} pic" width="700" height="500" loading="lazy">
-                <a href="{% url 'add_favorite' drink.idDrink %}" class="mt-5 btn btn-outline-danger">Add To Favorite</a>
+                <a href="{% url 'add_favorite' drink.idDrink %}" class="mt-5 btn btn-success">Add To Favorite</a>
             </div>
             <!-- Text Section -->
             <div class="col-12 col-lg-6">
