--- a/templates/myApp/my_favorites.html
+++ b/templates/myApp/my_favorites.html
@@ -5,7 +5,7 @@
 <div class="container p-4 p-md-5 my-4 rounded text-body-emphasis heading-part">
     <div class="row">
         <div class="col-lg-6 col-12 px-0">
-            <h1 class="display-4 fst-italic text-dark">your favorite recipes</h1>
+            <h1 class="display-4 fst-italic text-dark"><strong>{{user.username}}</strong>'s Favorite Recipes</h1>
 
         </div>
     </div>
@@ -18,7 +18,7 @@
         <!-- Image Section -->
         <div class="col-12 col-lg-6 mb-3 mb-lg-0 text-center">
             <img src="{{favorite.recipe.picture_url}}" class="d-block mx-auto img-fluid rounded shadow-sm" alt="{{ drink.strDrink }} pic" width="700" height="500" loading="lazy">
-            <a href="" class="mt-5 btn btn-danger">Remove</a>
+            <a href="{% url 'delete_favorite' favorite.pk %}" class="mt-5 btn btn-danger">Remove From Favorite</a>
         </div>
         <!-- Text Section -->
         <div class="col-12 col-lg-6">
