--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'myApp/css/base.css' %}"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% bootstrap_css %}
 </head>
 <body>
