--- a/templates/base.html
+++ b/templates/base.html
@@ -22,14 +22,26 @@
         <div class="d-flex flex-wrap align-items-center justify-content-between">
             <!-- Navigation Links -->
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'index' %}" class="nav-link px-2 text-white">Home</a></li>
-                <li><a href="{% url 'search' %}" class="nav-link px-2 text-white">Search</a></li>
-                <li><a href="{% url 'my_favorites' %}" class="nav-link px-2 text-white">My Favorites</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                <li><a href="{% url 'myApp:index' %}" class="nav-link px-2 text-white">Home</a></li>
+                <li><a href="{% url 'myApp:search' %}" class="nav-link px-2 text-white">Search</a></li>
+                
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'myApp:my_favorites' %}" class="nav-link px-2 text-white">My Favorites</a></li>
+                <li>
+                    <form action="{% url 'users:logout' %}" method="post">
+                        <button type="submit" class="nav-link px-2 text-white">Logout</button>
+                        {% csrf_token %}
+                    </form>
+                </li>
+                {% else %}
+                <li><a href="{% url 'users:login' %}" class="nav-link px-2 text-white">Login</a></li>
+                <li><a href="{% url 'users:signup' %}" class="nav-link px-2 text-white">Signup</a></li>
+
+                {% endif %}
+                    
             </ul>
             <!-- Search Form -->
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 d-flex" role="search" method="get" action="{% url 'search' %}">
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 d-flex" role="search" method="get" action="{% url 'myApp:search' %}">
                 <input type="text" name="query" class="form-control mx-1" placeholder="Search a drink..." aria-label="Search">
                 <button type="submit" class="btn btn-outline-primary btn-sm">Search</button>
             </form>
