--- a/templates/myApp/index.html
+++ b/templates/myApp/index.html
@@ -5,7 +5,7 @@
     <div class="col-lg-6 px-0">
         <h1 class="display-4 fst-italic text-dark">Get a Random Drink Recipe</h1>
         <p class="lead my-3 text-dark">Just by Clicking on the button, you can get a random drink recipe and all for free!</p>
-        <p class="lead mb-0 text-dark"><a href="{% url 'index' %}" class="btn btn-outline-primary">Bring it!</a></p>
+        <p class="lead mb-0 text-dark"><a href="{% url 'myApp:index' %}" class="btn btn-outline-primary">Bring it!</a></p>
     </div>
 </div>
 
@@ -18,7 +18,13 @@
             <div class="col-12 col-lg-6 text-center">
                 <img src="{{ drink.strDrinkThumb }}" class="d-block mx-auto img-fluid"
                     alt="{{ drink.strDrink }} pic" style="max-width: 100%; height: auto;" loading="lazy">
-                    <a href="{% url 'add_favorite' drink.idDrink %}" class="mt-5 btn btn-success">Add To Favorite</a>
+                    
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'myApp:add_favorite' drink.idDrink %}" class="mt-5 btn btn-success">Add To Favorite</a>
+                    {% else %}
+                    <h4 class="my-4"><a href="{% url 'users:login' %}">Login</a> or <a href="{% url 'users:signup' %}">Signup</a> for adding this Recipe to favorites.</h4>
+                    {% endif %}
+                        
             </div>
             <!-- Content Section -->
             <div class="col-lg-6 py-3">
