--- a/templates/myApp/search.html
+++ b/templates/myApp/search.html
@@ -7,7 +7,7 @@
         <div class="col-lg-6 col-12 px-0">
             <h1 class="display-4 fst-italic text-dark">Search in our database</h1>
             <p class="lead my-3 text-dark">Type a drink name and click the button to get all the information about it!</p>
-            <form class="d-flex" role="search" method="get" action="{% url 'search' %}">
+            <form class="d-flex" role="search" method="get" action="{% url 'myApp:search' %}">
                 <input type="text" name="query" class="form-control me-2" placeholder="Search a drink..." aria-label="Search">
                 <button type="submit" class="btn btn-primary">Search</button>
             </form>
@@ -32,8 +32,11 @@
             <!-- Image Section -->
             <div class="col-12 col-lg-6 mb-3 mb-lg-0 text-center">
                 <img src="{{ drink.strDrinkThumb }}" class="d-block mx-auto img-fluid rounded shadow-sm" alt="{{ drink.strDrink }} pic" width="700" height="500" loading="lazy">
-                <a href="{% url 'add_favorite' drink.idDrink %}" class="mt-5 btn btn-success">Add To Favorite</a>
-            </div>
+                {% if user.is_authenticated %}
+                <a href="{% url 'myApp:add_favorite' drink.idDrink %}" class="mt-5 btn btn-success">Add To Favorite</a>
+                {% else %}
+                <h4 class="my-4"><a href="{% url 'users:login' %}">Login</a> or <a href="{% url 'users:signup' %}">Signup</a> for adding this Recipe to favorites.</h4>
+                {% endif %}            </div>
             <!-- Text Section -->
             <div class="col-12 col-lg-6">
                 <h5 class="display-5 lh-1 my-3 fw-bold text-dark">{{ drink.strDrink }}</h5>
